modelos actualizados finalmente funcionando
